--- a/ts/cognitarium-schema/package.json
+++ b/ts/cognitarium-schema/package.json
@@ -18,7 +18,7 @@
         "node": "^18.12",
         "yarn": "~1.22.17"
     },
-    "workspaces": [
+    "files": [
         "dist"
     ],
     "devDependencies": {
