--- a/.github/workflows/update-schema.yml
+++ b/.github/workflows/update-schema.yml
@@ -83,10 +83,15 @@ jobs:
           rm -rf .git/modules/tmp
           rm -rf tmp
 
+      - name: Setup node environment
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.12
+
       - name: "[TS] Bump npm package version"
         if: ${{ github.event.inputs.draft == 'false' }}
         run: |
-          find ts/* -maxdepth 0 -type d -exec sh -c 'cd {} && npm version ${{ github.event.inputs.ref }} --allow-same-version --no-git-tag-version' \;     
+          find ts/* -maxdepth 0 -type d -exec sh -c 'cd {} && yarn version --new-version ${{ github.event.inputs.ref }} --allow-same-version --no-git-tag-version' \;
 
       - name: Commit documentation draft
         uses: stefanzweifel/git-auto-commit-action@v4
@@ -95,5 +100,6 @@ jobs:
           commit_user_name: ${{ secrets.OKP4_BOT_GIT_COMMITTER_NAME }}
           commit_user_email: ${{ secrets.OKP4_BOT_GIT_COMMITTER_EMAIL }}
           commit_author: ${{ secrets.OKP4_BOT_GIT_AUTHOR_NAME }} <${{ secrets.OKP4_BOT_GIT_AUTHOR_EMAIL }}>
-          commit_message: "feat: update schema files"
+          commit_message: "${{ github.event.inputs.draft == 'true' && 'feat: update schema files' || 'chore(release): perform release' }} ${{ github.event.inputs.draft == 'false' && github.event.inputs.ref || '' }}"
+          tagging_message: ${{ github.event.inputs.draft == 'false' && github.event.inputs.ref || '' }}
           file_pattern: '*.json'
