--- a/ts/README.md.template
+++ b/ts/README.md.template
@@ -1,6 +1,6 @@
 # OKP4 {{ (ds "data").name }} schema
 
-> Generated typescript types for [{{ (ds "data").contract_name }} contract](https://github.com/okp4/contracts/tree/{{ (ds "data").ref(ds "data") }}/contracts/{{ (ds "data").contract_name }}).
+> Generated typescript types for [{{ (ds "data").contract_name }} contract](https://github.com/okp4/contracts/tree/{{ (ds "data").ref }}/contracts/{{ (ds "data").contract_name }}).
 
 [![version](https://img.shields.io/github/v/release/okp4/okp4-contract-schema?style=for-the-badge&logo=github)](https://github.com/okp4/okp4-contract-schema/releases)
 [![build](https://img.shields.io/github/actions/workflow/status/okp4/okp4-contract-schema/build.yml?branch=main&label=build&style=for-the-badge&logo=github)](https://github.com/okp4/okp4-contract-schema/actions/workflows/build.yml)
