--- a/.github/workflows/update-schema.yml
+++ b/.github/workflows/update-schema.yml
@@ -100,6 +100,8 @@ jobs:
 
             echo "📄 Generate $CONTRACT_NAME readme.md..."
             gomplate -f ts/README.md.template -d data.json -o ts/$SCHEMA_NAME/README.md
+
+            rm data.json
           done
 
           git rm --ignore-unmatch --cached tmp
