--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -34,6 +34,7 @@ jobs:
         uses: avto-dev/markdown-lint@v1.5.0
         with:
           args: "**/*.md"
+          ignore: "ts/**/README.md"
 
   lint-yaml:
     runs-on: ubuntu-22.04
