--- a/.github/workflows/update-schema.yml
+++ b/.github/workflows/update-schema.yml
@@ -74,11 +74,10 @@ jobs:
           git_user_signingkey: true
           git_commit_gpgsign: true
 
-      - name: Set up Homebrew
-        uses: Homebrew/actions/setup-homebrew@master
-
-      - name: Install Gomplate
-        run: brew install gomplate
+      - name: Install gomplate
+        run: |
+          curl -s -L -o /usr/local/bin/gomplate https://github.com/hairyhenderson/gomplate/releases/download/v3.11.5/gomplate_linux-amd64
+          chmod +x /usr/local/bin/gomplate
 
       - name: Copy updated schema and generate README
         run: |
