--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,7 +52,7 @@ jobs:
         with:
           node-version: 18.12
           registry-url: ${{ matrix.registry.url }}
-          scope: "@okp4"
+          scope: "@axone"
 
       - name: Installing quicktype
         run: |
@@ -63,9 +63,9 @@ jobs:
         id: package
         run: |
           SCHEMA=${{ matrix.schema }}
-          PACKAGE_SRC=$(echo "ts/${SCHEMA/okp4-/""}-schema")
+          PACKAGE_SRC=$(echo "ts/${SCHEMA/axone-/""}-schema")
           mkdir ${PACKAGE_SRC}/gen-ts
-          echo "DESTINATION=$(echo "ts/${SCHEMA/okp4-/""}-schema")" >> $GITHUB_OUTPUT
+          echo "DESTINATION=$(echo "ts/${SCHEMA/axone-/""}-schema")" >> $GITHUB_OUTPUT
 
       - name: Generate sources
         run: |
@@ -94,4 +94,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          body: Schema changelog avalaible on [contract repository](https://github.com/okp4/contracts/blob/${{ github.ref_name }}/CHANGELOG.md).
+          body: Schema changelog avalaible on [contract repository](https://github.com/axone-protocol/contracts/blob/${{ github.ref_name }}/CHANGELOG.md).
