--- a/.github/workflows/update-schema.yml
+++ b/.github/workflows/update-schema.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
     inputs:
       ref:
-        description: "New okp4/contracts version (repository tag or repository ref)"
+        description: "New axone-protocol/contracts version (repository tag or repository ref)"
         required: true
       draft:
         type: boolean
@@ -28,15 +28,15 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.OKP4_TOKEN }}
+          token: ${{ secrets.OPS_TOKEN }}
           fetch-depth: 2
 
       - name: Check out repository
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.inputs.ref }}
-          repository: okp4/contracts
-          token: ${{ secrets.OKP4_TOKEN }}
+          repository: axone-protocol/contracts
+          token: ${{ secrets.OPS_TOKEN }}
           path: tmp
 
       - name: Cache cargo registry
@@ -68,8 +68,8 @@ jobs:
       - name: Import GPG key
         uses: crazy-max/ghaction-import-gpg@v5
         with:
-          gpg_private_key: ${{ secrets.OKP4_BOT_GPG_PRIVATE_KEY }}
-          passphrase: ${{ secrets.OKP4_BOT_GPG_PASSPHRASE }}
+          gpg_private_key: ${{ secrets.BOT_GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.BOT_GPG_PASSPHRASE }}
           git_config_global: true
           git_user_signingkey: true
           git_commit_gpgsign: true
@@ -87,7 +87,7 @@ jobs:
 
           CONTRACTS=$(ls schema/ | jq -R -s -c 'split("\n")[:-1]')
           for CONTRACT in $(echo ${CONTRACTS} | jq -r '.[]'); do
-            NAME=${CONTRACT/okp4-/""}
+            NAME=${CONTRACT/axone-/""}
             SCHEMA_NAME=$NAME-schema
 
             jq -n --rawfile docs tmp/docs/$CONTRACT.md \
@@ -120,9 +120,9 @@ jobs:
       - name: Commit documentation draft
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_user_name: ${{ secrets.OKP4_BOT_GIT_COMMITTER_NAME }}
-          commit_user_email: ${{ secrets.OKP4_BOT_GIT_COMMITTER_EMAIL }}
-          commit_author: ${{ secrets.OKP4_BOT_GIT_AUTHOR_NAME }} <${{ secrets.OKP4_BOT_GIT_AUTHOR_EMAIL }}>
+          commit_user_name: ${{ vars.BOT_GIT_COMMITTER_NAME }}
+          commit_user_email: ${{ vars.BOT_GIT_COMMITTER_EMAIL }}
+          commit_author: ${{ vars.BOT_GIT_AUTHOR_NAME }} <${{ vars.BOT_GIT_AUTHOR_EMAIL }}>
           commit_message: "${{ github.event.inputs.draft == 'true' && 'feat: update schema files' || 'chore(release): perform release' }} ${{ github.event.inputs.draft == 'false' && github.event.inputs.ref || '' }}"
           tagging_message: ${{ github.event.inputs.draft == 'false' && github.event.inputs.ref || '' }}
           file_pattern: '*.json */README.md'
