--- a/.github/workflows/update-schema.yml
+++ b/.github/workflows/update-schema.yml
@@ -148,17 +148,27 @@ jobs:
           retention-days: 1
           overwrite: true
 
+  publish-new-schema:
+    runs-on: ubuntu-22.04
+    needs: build-target
+    steps:
+      - name: Download artefact
+        uses: actions/download-artifact@v4
+        with:
+          name: schema
+          path: ./ 
+    
 #      - name: "[TS] Bump npm package version"
 #        if: ${{ github.event.inputs.draft == 'false' }}
 #        run: |
 #          find ts/* -maxdepth 0 -type d -exec sh -c 'cd {} && yarn version --new-version ${{ github.event.inputs.ref }} --allow-same-version --no-git-tag-version' \;
 #
-#      - name: Commit documentation draft
-#        uses: stefanzweifel/git-auto-commit-action@v5
-#        with:
-#          commit_user_name: ${{ vars.BOT_GIT_COMMITTER_NAME }}
-#          commit_user_email: ${{ vars.BOT_GIT_COMMITTER_EMAIL }}
-#          commit_author: ${{ vars.BOT_GIT_AUTHOR_NAME }} <${{ vars.BOT_GIT_AUTHOR_EMAIL }}>
-#          commit_message: "${{ github.event.inputs.draft == 'true' && 'feat: update schema files' || 'chore(release): perform release' }} ${{ github.event.inputs.draft == 'false' && github.event.inputs.ref || '' }}"
-#          tagging_message: ${{ github.event.inputs.draft == 'false' && github.event.inputs.ref || '' }}
-#          file_pattern: '*.json */README.md'
+      - name: Commit documentation draft
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_user_name: ${{ vars.BOT_GIT_COMMITTER_NAME }}
+          commit_user_email: ${{ vars.BOT_GIT_COMMITTER_EMAIL }}
+          commit_author: ${{ vars.BOT_GIT_AUTHOR_NAME }} <${{ vars.BOT_GIT_AUTHOR_EMAIL }}>
+          commit_message: "${{ github.event.inputs.draft == 'true' && 'feat: update schema files' || 'chore(release): perform release' }} ${{ github.event.inputs.draft == 'false' && github.event.inputs.ref || '' }}"
+          tagging_message: ${{ github.event.inputs.draft == 'false' && github.event.inputs.ref || '' }}
+          file_pattern: '*.json */README.md go/**/*.go'
