--- a/.github/workflows/update-schema.yml
+++ b/.github/workflows/update-schema.yml
@@ -98,7 +98,7 @@ jobs:
       - uses: actions/checkout@v4
       - id: set-matrix
         run: echo "::set-output name=schema::$(ls schema/ | jq -R -s -c 'split("\n")[:-1]' )"
-  
+
   build-target:
     runs-on: ubuntu-22.04
     needs: schema-matrix
@@ -113,7 +113,7 @@ jobs:
         with:
           name: schema
           path: ./
-        
+
       - name: Setup node environment (for building)
         uses: actions/setup-node@v4
         with:
@@ -139,7 +139,7 @@ jobs:
       - name: Build
         run: |
           mage -v build:${{ matrix.target }} ${{ matrix.schema }}
-    
+
       - name: Upload artefact
         uses: actions/upload-artifact@v4
         with:
@@ -156,13 +156,13 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: schema
-          path: ./ 
-    
-#      - name: "[TS] Bump npm package version"
-#        if: ${{ github.event.inputs.draft == 'false' }}
-#        run: |
-#          find ts/* -maxdepth 0 -type d -exec sh -c 'cd {} && yarn version --new-version ${{ github.event.inputs.ref }} --allow-same-version --no-git-tag-version' \;
-#
+          path: ./
+
+      - name: "[TS] Bump npm package version"
+        if: ${{ github.event.inputs.draft == 'false' }}
+        run: |
+          find ts/* -maxdepth 0 -type d -exec sh -c 'cd {} && yarn version --new-version ${{ github.event.inputs.ref }} --allow-same-version --no-git-tag-version' \;
+
       - name: Commit documentation draft
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
