--- a/.github/workflows/update-schema.yml
+++ b/.github/workflows/update-schema.yml
@@ -177,6 +177,11 @@ jobs:
         run: |
           mage -v bumpVersion:ts ${{ github.event.inputs.ref }}
 
+      - name: "Bump go version"
+        if: ${{ github.event.inputs.draft == 'false' }}
+        run: |
+          mage -v bumpVersion:go ${{ github.event.inputs.ref }}
+
       - name: Commit documentation draft
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
