ci(publish): set a fixed version of quicktype

--- a/.github/workflows/update-schema.yml
+++ b/.github/workflows/update-schema.yml
@@ -133,7 +133,7 @@ jobs:
 
       - name: Installing quicktype
         run: |
-          yarn global add quicktype
+          yarn global add quicktype@23
           echo "$(yarn global bin)" >> $GITHUB_PATH
 
       - name: Build
